hphp/hack/test/typecheck/interface_requires_abstract_final_class.php.exp
File "interface_requires_abstract_final_class.php", line 7, characters 19-19:
C is not an extendable class. (NastCheck[3072])
