hphp/hack/test/typecheck/interface_requires_abstract_final_class.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

abstract final class C {}

interface I {
  require extends C;
}
